[package]
name = "value-extract-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
uuid = { version="0.8.2", features=["v4"] }
tonic = "0.7.0"

[build-dependencies]
tonic-build = "0.7.0"